--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\AngleSlider.cs" />
      <Compile Include="Assets\Scripts\ExplodeObject.cs" />
+     <Compile Include="Assets\Scripts\Flame.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\LaunchButton.cs" />
      <Compile Include="Assets\Scripts\Levels\Level0.cs" />
